# QAS_crypto_platform

./: QTBCoin_User_Guide_v0.11.docx  README.md  qas_coin_deploy.docx  setup.docx  ~$BCoin_User_Guide_v0.11.docx  ~$estions_vivian.docx  ~$yptocurrency useful website.docx
keys/: QASToken_Account.docx  Secret Recovery Phrase.docx  private_key.docx
qascoin/Django_App_v0.9/: db.sqlite3  package-lock.json  package.json  requirements.txt  test.js  truffle-config.js
qascoin/Django_App_v0.9/QASTokenApp/: apps.py  forms.py  fund.py  models.py  sendTransaction.py  tokens.py  urls.py  views.py
qascoin/Django_App_v0.9/config/: settings.py  urls.py
qascoin/Django_App_v0.9/static/: Migrations.json
qascoin/Django_App_v0.9/staticfiles/: QASTokenSale.json
qascoin/Django_App_v0.9/staticfiles/src/: Migrations.json
qascoin/Django_App_v0.9/templates/: account.html  base.html  home.html  index.html  real_home.html
qascoin/Django_App_v0.9/templates/registration/: login.html  (+3 more)
qascoin/QAS_token/: package-lock.json  package.json  truffle-config.js
qascoin/QAS_token/contracts/: QASToken.sol  QASTokenSale.sol
qascoin/QAS_token/migrations/: 2_deploy_contracts.js
qascoin/QAS_token/src/: index.html
qascoin/QAS_token/test/: QASToken.js  QASTokenSale.js
qascoin/secret_sharing/: Cargo.toml  privateKey.txt  pyproject.toml  shares.txt
qascoin/secret_sharing/.env/: pyvenv.cfg
qascoin/secret_sharing/.env/Scripts/: activate  activate.bat
qascoin/secret_sharing/src/: lib.rs
qascoin/secret_sharing/sss/: Cargo.toml
qascoin/secret_sharing/sss/src/: field.rs  gf2n.rs  shamir.rs
(+8 files in other folders)
